# Pahestor

./: .gitignore  README.md  pyproject.toml
backend/: docs.py
backend/admin/analytics_reporting/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/analytics_reporting/migrations/: 0001_initial.py
backend/admin/auxiliary_services/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/auxiliary_services/migrations/: 0001_initial.py
backend/admin/feedback_processing/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/feedback_processing/migrations/: 0001_initial.py
backend/admin/inventory_management/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/inventory_management/migrations/: 0001_initial.py
backend/admin/logistics/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/logistics/migrations/: 0001_initial.py
backend/admin/marketplace_integration/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/marketplace_integration/migrations/: 0001_initial.py
backend/admin/user_role_management/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/admin/user_role_management/migrations/: 0001_initial.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
